--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ignite-ui/docs",
+  "name": "@anna-ignite-ui-dev/docs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -28,10 +28,10 @@
     "vite": "^4.0.4"
   },
   "dependencies": {
-    "@ignite-ui/eslint-config": "*",
-    "@ignite-ui/react": "*",
-    "@ignite-ui/tokens": "*",
-    "@ignite-ui/ts-config": "*",
+    "@anna-ignite-ui-dev/eslint-config": "*",
+    "@anna-ignite-ui-dev/react": "*",
+    "@anna-ignite-ui-dev/tokens": "*",
+    "@anna-ignite-ui-dev/ts-config": "*",
     "@storybook/addon-a11y": "^6.5.16",
     "phosphor-react": "^1.4.1",
     "polished": "^4.2.2",
