--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ignite-ui/tokens",
+  "name": "@anna-ignite-ui-dev/tokens",
   "version": "1.0.0",
   "description": "",
   "main": "./dist/index.js",
@@ -14,8 +14,8 @@
   "author": "Anna Luiza",
   "license": "MIT",
   "devDependencies": {
-    "@ignite-ui/ts-config": "*",
-    "@ignite-ui/eslint-config": "*",
+    "@anna-ignite-ui-dev/ts-config": "*",
+    "@anna-ignite-ui-dev/eslint-config": "*",
     "tsup": "^6.5.0",
     "typescript": "^4.9.4"
   }
