--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "turbo run build",
     "changeset": "changeset",
     "version-packages": "changeset version",
-    "release": "turbo run build --filter=@anna-ignite-ui-dev/docs && changeset publish"
+    "release": "turbo run build --filter=packages/docs && changeset publish"
   },
   "license": "MIT",
   "private": true,
